Bug #17896: MIN of CASE WHEN returns non-minimum value! - after review fixes